[package]
name = "whoisa"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
tokio ={ version = "1.35.0", features =["full"]}
whois-rust = { version = "1.5.2", features = ["tokio"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.17.7"
